--- a/src/app/share/components/card/card.scss
+++ b/src/app/share/components/card/card.scss
@@ -3,8 +3,9 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
-  height: 336.89px;
-  width: 357.33px;
+  min-height: 300px;
+  max-width: 357px;
+  width: 100%;
   background: linear-gradient(
     145deg,
     rgba(26, 26, 26, 0.8) 0%,
